--- a/index.html
+++ b/index.html
@@ -9,62 +9,67 @@
   <body>
     <div class="phone">
       <header class="header">
-        <ul class="header__list">
-          <li class="herder__list-item">All</li>
-          <li class="herder__list-item">Advertising</li>
-          <li class="herder__list-item">Dev & Science</li>
-          <li class="herder__list-item">Goals</li>
-          <li class="herder__list-item">IOS Development</li>
-        </ul>
+        <span class="header__btn">⬅️</span>
+        <h1 class="header__title">MY CART</h1>
+        <span class="header__btn">🛒</span>
       </header>
+      <section class="totla">
+        <span class="totla__price">$3550</span>
+        <span class="total__subtitle">based on your 5 items</span>
+      </section>
       <main class="main">
-        <div class="cards">
-          <div class="cards__item">
-            <h2 class="item-title">Hello! <br />Css Masterclass!</h2>
-            <div class="card__footer">
-              <span class="item-price">Free</span>
-              <span class="item-lenght">2</span>
+        <article class="main-item">
+          <div class="main__topLeft">
+            <span class="topLeft__title"
+              >POP<br />TEMPLE PRINT<br />
+              T- <br />SHIRT</span
+            >
+            <span class="topLeft__subtitle">versace limited 2021</span>
+          </div>
+          <div class="main__topRight">
+            <span class="topRight_title">$1990</span>
+            <span class="topRight_subtitle">$995 per piece</span>
+          </div>
+          <div class="main__bottom">
+            <div class="bottomLeft">
+              <span class="itemtop">SIZE</span>
+              <span class="itembottom">48-L</span>
+            </div>
+            <div class="bottomRight">
+              <span class="itemtop">QT</span>
+              <span class="itembottom">2 pcs</span>
             </div>
           </div>
-          <div class="cards__item">
-            <h2 class="item-title">Movile Interfaces Advanced</h2>
-            <div class="card__footer">
-              <span class="item-price">Free</span>
-              <span class="item-lenght">2</span>
+        </article>
+        <img src="https://source.unsplash.com/random" class="item__photo" />
+        <div class="gap"></div>
+      </main>
+      <main class="main">
+        <article class="main-item">
+          <div class="main__topLeft">
+            <span class="topLeft__title"
+              >POP<br />TEMPLE PRINT<br />
+              T- <br />SHIRT</span
+            >
+            <span class="topLeft__subtitle">versace limited 2021</span>
+          </div>
+          <div class="main__topRight">
+            <span class="topRight_title">$1990</span>
+            <span class="topRight_subtitle">$995 per piece</span>
+          </div>
+          <div class="main__bottom">
+            <div class="bottomLeft">
+              <span class="itemtop">SIZE</span>
+              <span class="itembottom">48-L</span>
+            </div>
+            <div class="bottomRight">
+              <span class="itemtop">QT</span>
+              <span class="itembottom">2 pcs</span>
             </div>
           </div>
-          <div class="cards__item">
-            <h2 class="item-title">
-              Graphic Design.<br />
-              ProFessium
-            </h2>
-            <div class="card__footer">
-              <span class="item-price">$199/month</span>
-              <span class="item-lenght">9 months</span>
-            </div>
-          </div>
-          <div class="cards__item">
-            <h2 class="item-title">Web Design Junior</h2>
-            <div class="card__footer">
-              <span class="item-price">Free</span>
-              <span class="item-lenght">3</span>
-            </div>
-          </div>
-          <div class="cards__item">
-            <h2 class="item-title">Inclusive Web Design</h2>
-            <div class="card__footer">
-              <span class="item-price">$99/mom</span>
-              <span class="item-lenght">3</span>
-            </div>
-          </div>
-          <div class="cards__item">
-            <h2 class="item-title">Machine Learning</h2>
-            <div class="card__footer">
-              <span class="item-price">$99/mom</span>
-              <span class="item-lenght">3</span>
-            </div>
-          </div>
-        </div>
+        </article>
+        <img src="https://source.unsplash.com/random" class="item__photo2" />
+        <div class="gap"></div>
       </main>
     </div>
   </body>
