--- a/index.html
+++ b/index.html
@@ -10,58 +10,58 @@
     <div class="phone">
       <header class="header">
         <ul class="header__list">
-          <li class="herder__list-item">All</li>
-          <li class="herder__list-item">Advertising</li>
-          <li class="herder__list-item">Dev & Science</li>
-          <li class="herder__list-item">Goals</li>
-          <li class="herder__list-item">IOS Development</li>
+          <li class="herder__list-item">전체보기</li>
+          <li class="herder__list-item">프론트엔드</li>
+          <li class="herder__list-item">백엔드</li>
+          <li class="herder__list-item">모바일</li>
+          <li class="herder__list-item">데브옵스</li>
         </ul>
       </header>
       <main class="main">
         <div class="cards">
           <div class="cards__item">
-            <h2 class="item-title">Hello! <br />Css Masterclass!</h2>
+            <h2 class="item-title">React 완벽 가이드<br />2024년 최신판</h2>
             <div class="card__footer">
-              <span class="item-price">Free</span>
-              <span class="item-lenght">2</span>
+              <span class="item-price">₩55,000</span>
+              <span class="item-lenght">8주</span>
             </div>
           </div>
           <div class="cards__item">
-            <h2 class="item-title">Movile Interfaces Advanced</h2>
+            <h2 class="item-title">Next.js 마스터 클래스</h2>
             <div class="card__footer">
-              <span class="item-price">Free</span>
-              <span class="item-lenght">2</span>
+              <span class="item-price">₩49,900</span>
+              <span class="item-lenght">6주</span>
             </div>
           </div>
           <div class="cards__item">
             <h2 class="item-title">
-              Graphic Design.<br />
-              ProFessium
+              Spring Boot<br />
+              실전 프로젝트
             </h2>
             <div class="card__footer">
-              <span class="item-price">$199/month</span>
-              <span class="item-lenght">9 months</span>
+              <span class="item-price">₩99,000/월</span>
+              <span class="item-lenght">3개월</span>
             </div>
           </div>
           <div class="cards__item">
-            <h2 class="item-title">Web Design Junior</h2>
+            <h2 class="item-title">Flutter 앱 개발 기초</h2>
             <div class="card__footer">
-              <span class="item-price">Free</span>
-              <span class="item-lenght">3</span>
+              <span class="item-price">₩39,900</span>
+              <span class="item-lenght">4주</span>
             </div>
           </div>
           <div class="cards__item">
-            <h2 class="item-title">Inclusive Web Design</h2>
+            <h2 class="item-title">Docker & Kubernetes 입문</h2>
             <div class="card__footer">
-              <span class="item-price">$99/mom</span>
-              <span class="item-lenght">3</span>
+              <span class="item-price">₩79,900</span>
+              <span class="item-lenght">8주</span>
             </div>
           </div>
           <div class="cards__item">
-            <h2 class="item-title">Machine Learning</h2>
+            <h2 class="item-title">TypeScript 실전 강의</h2>
             <div class="card__footer">
-              <span class="item-price">$99/mom</span>
-              <span class="item-lenght">3</span>
+              <span class="item-price">₩45,000</span>
+              <span class="item-lenght">5주</span>
             </div>
           </div>
         </div>
